--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,14 +2,12 @@
   height: 100vh;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
 }
 
 .main {
   width: 400px;
-  padding: 5rem 0;
+  padding: 30px 0;
 }
 
 .footer {
