--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -41,6 +41,10 @@
   margin-right: 10px;
 }
 
+.cardText {
+  font-size: 14px;
+}
+
 .suggestionLabel {
   font-size: 14px;
 }
@@ -48,6 +52,7 @@
 .suggestion {
   resize: none;
   margin: 5px 0 10px 0;
+  font-size: 14px;
 }
 
 .buttonContainer {
