--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,13 +1,14 @@
 .container {
   height: 100vh;
   min-height: 100vh;
-  display: flex;
-  justify-content: center;
+  flex: 1;
 }
 
 .main {
   width: 400px;
-  padding: 30px 0;
+  padding: 20px 0;
+  flex: 1;
+  margin: 0 auto;
 }
 
 .footer {
